GEM/REACT OAEP in related works

--- a/crypto2025/biblio.bib
+++ b/crypto2025/biblio.bib
@@ -260,3 +260,76 @@
   keywords={digital signature;encryption;key agreement;public-key cryptography},
   doi={10.1109/IEEESTD.2004.94612}
 }
+
+@article{ansi-x9.63,
+  title={63: Public Key Cryptography for the Financial Services Industry, Key Agreement and Key Transport Using Elliptic Curve Cryptography},
+  author={ANSI, X9},
+  journal={American National Standards Institute},
+  year={1998}
+}
+
+
+@inproceedings{DBLP:conf/crypto/Shoup01,
+  author       = {Victor Shoup},
+  editor       = {Joe Kilian},
+  title        = {{OAEP} Reconsidered},
+  booktitle    = {Advances in Cryptology - {CRYPTO} 2001, 21st Annual International
+                  Cryptology Conference, Santa Barbara, California, USA, August 19-23,
+                  2001, Proceedings},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {2139},
+  pages        = {239--259},
+  publisher    = {Springer},
+  year         = {2001},
+  url          = {https://doi.org/10.1007/3-540-44647-8\_15},
+  doi          = {10.1007/3-540-44647-8\_15},
+  timestamp    = {Tue, 14 May 2019 10:00:48 +0200},
+  biburl       = {https://dblp.org/rec/conf/crypto/Shoup01.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+@inproceedings{DBLP:conf/ctrsa/OkamotoP01,
+  author       = {Tatsuaki Okamoto and
+                  David Pointcheval},
+  editor       = {David Naccache},
+  title        = {{REACT:} Rapid Enhanced-Security Asymmetric Cryptosystem Transform},
+  booktitle    = {Topics in Cryptology - {CT-RSA} 2001, The Cryptographer's Track at
+                  {RSA} Conference 2001, San Francisco, CA, USA, April 8-12, 2001, Proceedings},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {2020},
+  pages        = {159--175},
+  publisher    = {Springer},
+  year         = {2001},
+  url          = {https://doi.org/10.1007/3-540-45353-9\_13},
+  doi          = {10.1007/3-540-45353-9\_13},
+  timestamp    = {Tue, 14 May 2019 10:00:52 +0200},
+  biburl       = {https://dblp.org/rec/conf/ctrsa/OkamotoP01.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+@inproceedings{DBLP:conf/ctrsa/CoronHJPPT02,
+  author       = {Jean{-}S{\'{e}}bastien Coron and
+                  Helena Handschuh and
+                  Marc Joye and
+                  Pascal Paillier and
+                  David Pointcheval and
+                  Christophe Tymen},
+  editor       = {Bart Preneel},
+  title        = {{GEM:} {A} Generic Chosen-Ciphertext Secure Encryption Method},
+  booktitle    = {Topics in Cryptology - {CT-RSA} 2002, The Cryptographer's Track at
+                  the {RSA} Conference, 2002, San Jose, CA, USA, February 18-22, 2002,
+                  Proceedings},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {2271},
+  pages        = {263--276},
+  publisher    = {Springer},
+  year         = {2002},
+  url          = {https://doi.org/10.1007/3-540-45760-7\_18},
+  doi          = {10.1007/3-540-45760-7\_18},
+  timestamp    = {Tue, 14 May 2019 10:00:52 +0200},
+  biburl       = {https://dblp.org/rec/conf/ctrsa/CoronHJPPT02.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
